2009-01-17  Claude Paroz  <claude@2xlibre.net>

	* media/css/difflib.css: Specific CSS for diff template.
	* templates/vertimus/vertimus_detail.html: Add link to diff template just
	under po files.
	* templates/vertimus/vertimus_diff.html: Show side-by-side diff between
	two po files.
	* vertimus/models.py: 3 utility methods added for diff functionality.
	* vertimus/urls.py: Add URL for diff view.
	* vertimus/views.py: Add vertimus_diff view.
	Preliminary work for #566060.

2009-01-17  Claude Paroz  <claude@2xlibre.net>

	* vertimus/urls.py: Accept '.' in branch name.

2009-01-16  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Add documentation for get_lang_stats_by_type output
	structure.
	* languages/view.py: Adapted XML output to revised get_lang_stats
	structure.
	* templates/languages/language_release_stats.html:
	* templates/stats_show.html: Use preferably vertimus-by-names URLs.
	Fixes bug #567398.

2009-01-16  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: First version of commit_po, currently not used (WIP).
	* stats/utils.py: Add an optional raise_on_error argument to
	run_shell_command. 
	* templates/module_detail.html: Translate module comment.
	Fixes #567802.

2009-01-15  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* vertimus/models.py: A backup is done after each commit, fixes
	#567251. Fixes the sequence number in the action_backup table.
	* vertimus/tests/__init__.py: Test adjustments to reflect the
	change.	

2009-01-15 Og Maciel <ogmaciel@gnome.org>

	* stats/management/commands/update-trans.py: Removed the option argument
	DISTINCT to make it work with sqlite.

2009-01-14  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Translate description in domain.get_description.
	* templates/people/person_detail.html:
	* templates/vertimus/vertimus_detail.html: Use domain.get_description.

2009-01-14  Claude Paroz  <claude@2xlibre.net>

	* media/css/main.css: Added style for having the translation graph outside