@@ -1,3 +1,10 @@
+2009-01-18  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* vertimus/models.py: Order by ID instead of created, it avoids a
+	possible problem with the dumb MySQL database (where datetime
+	precision is limited to second) when two actions are done in the
+	same second.
+
 2009-01-17  Claude Paroz  <claude@2xlibre.net>
 
 	* media/css/difflib.css: Specific CSS for diff template.
